--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "tabs",
     "activeTab"
   ],
+  "host_permissions": ["http://127.0.0.1:5000/, https://127.0.0.1:5000/"],
   "background": {
     "service_worker": "background.js"
   },
