--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "version": "0.1",
   "permissions": [
     "tabs",
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "host_permissions": ["http://127.0.0.1:5000/, https://127.0.0.1:5000/"],
   "background": {
