--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
     "activeTab",
     "storage"
   ],
-  "host_permissions": ["http://127.0.0.1:5000/, https://127.0.0.1:5000/"],
+  "host_permissions": [
+    "http://127.0.0.1:5000/, https://127.0.0.1:5000/"
+  ],
   "background": {
     "service_worker": "background.js"
   },
