--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
     "activeTab",
     "storage"
   ],
+  "web_accessible_resources": [
+    "popup/src/icons/*.svg"
+  ],
   "host_permissions": ["http://127.0.0.1:5000/", "https://127.0.0.1:5000/"],
   "background": {
     "service_worker": "background.js"
